EC-848: Fix notification spacing

--- a/src/components/basic-blocks/burger-menu/index.module.scss
+++ b/src/components/basic-blocks/burger-menu/index.module.scss
@@ -23,6 +23,7 @@
   &_item {
     width: 100% !important;
     display: flex !important;
+    column-gap: 12px;
     justify-content: flex-start !important;
     padding: 12px 10px !important;
     text-decoration: none !important;
